; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_compound_literal.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_compound_literal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* (i32*)* @read_compound_literal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @read_compound_literal(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  %6 = call i8* (...) @make_label()
  store i8* %6, i8** %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32* @read_decl_init(i32* %7)
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call %struct.TYPE_4__* @ast_lvar(i32* %9, i8* %10)
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %5, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i32* %12, i32** %14, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  ret %struct.TYPE_4__* %15
}

declare dso_local i8* @make_label(...) #1

declare dso_local i32* @read_decl_init(i32*) #1

declare dso_local %struct.TYPE_4__* @ast_lvar(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
